# synthetic-velocity-fields

./: .gitignore  README.md  demo.ipynb  pyproject.toml
scripts/: convert_to_hdf5.py  generate_data.py
synthetic_mock/: __init__.py  fields.py  generators.py  io.py  utils.py
