[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic_mock"
version = "0.1.0"
authors = [
    { name = "Alexandra Dupuy" }
]
description = "Synthetic 3D density and velocity field generator for gravitational basin segmentation tests."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools]
packages = ["synthetic_mock"]